<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".metodos">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_titulo2"
        android:textSize="35sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:textColor="@color/green"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:layout_width="92dp"
        android:layout_height="81dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/img_8" />

    <TextView
        android:layout_width="269dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="70dp"
        android:layout_marginTop="-75dp"
        android:text="@string/app_contenido1"
        android:textSize="13sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/img_6" />

    <TextView
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="70dp"
        android:layout_marginTop="-95dp"
        android:text="@string/app_info3"
        android:textSize="13sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="126dp"
        android:layout_height="139dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/img_7" />

    <TextView
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="70dp"
        android:layout_marginTop="-95dp"
        android:text="@string/app_info2"
        android:textSize="13sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:backgroundTint="@color/green"
        android:onClick="menu"
        android:text="@string/button_return" />
</LinearLayout>